@@ -5,6 +5,8 @@
     world ("__pycache__"). I don't think this code is actually
     necessary anymore. Deleted.
   * Python 2.7.0 deprecates CObject incorrectly. See Python issue #9675.
+  * Testsuite for "DB->get_transactional()" should not create databases
+    outside the TMP directory, neither leave the files behind.
 
 5.1.0:
   * Support for Berkeley DB 5.1. 
